--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,14 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
+
+html {
+  min-height: 50%;
+}
+
+body {
+  height: 100%;
+}
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
